# ai_employee

./: .gitignore  .gitignore copy  AGENTS.md  README.md  package.json  pyproject.toml
.code/agents/1876/: exec-call_9m85KvI2mMyYK4fv8wO44YO0.txt
.code/users/: user-message-5-f4f2c20b-16c8-4319-a0ab-1d896f5a18d9.txt
.github/: PULL_REQUEST_TEMPLATE.md
agent/: __init__.py  __main__.py  agent.py  analytics.py  app.py
agent/agents/: __init__.py  control_plane.py  coordinator.py  proverbs.py
agent/agents/blueprints/: __init__.py  desk.py
agent/callbacks/: __init__.py  after.py  before.py  guardrails.py
agent/guardrails/: __init__.py  evidence.py  quiet_hours.py  scopes.py  shared.py  trust.py
agent/schemas/: envelope.py
agent/services/: __init__.py  actions.py  audit.py  catalog.py  catalog_sync.py  objectives.py  outbox.py  policy.py  settings.py  state.py  supabase.py
db/: README.md
db/migrations/: 001_init.sql
db/seeds/: 000_demo_tenant.sql  000_placeholder.sql
docs/: MODULES.md  README.md  arch.md  glossary.md  logging-privacy.md  nfr.md  observability.md  prd.md  requirements.md  roadmap.md  threat-model.md  todo.md  ux.md
docs/DECISIONS/: ADR-0001-unified-composio-integration.md
docs/architecture/: agent-control-plane.md  composio-execution.md  data-model.md  data-roadmap.md  frontend.md  overview.md  universal-action-envelope.md
docs/decisions/: ADR-0001-unified-composio-integration.md  ADR-0002-copilotkit-frontends.md  ADR-0003-google-adk-runtime.md  ADR-0004-universal-action-envelope.md
docs/getting-started/: core-concepts.md  setup.md
docs/governance/: ownership-and-evergreen.md  security-and-guardrails.md
docs/implementation/: backend-callbacks.md  composio-tooling.md  frontend-shared-state.md  sidecar-agui.md  ui-surfaces.md
docs/operations/: deployment.md  run-and-observe.md
docs/operations/runbooks/: composio-outage.md  incident-template.md  outbox-recovery.md
docs/operations/runbooks/postmortems/: outbox-dlq-2025-09-18.md
docs/prd/: control-plane-prd.md  universal-ai-employee-prd.md
docs/references/: glossary.md  observability.md  product.md  requirements.md  roadmap.md
docs/schemas/: action-envelope.json  approval-modal.json  desk-state.json  guardrail-state.json
docs/use_cases/: control-plane-use-cases.md
libs_docs/copilotkit_examples/tests/: README.md  approvals.spec.ts  desk.spec.ts  guardrails.spec.ts  sidebar.spec.ts
scripts/: run-agent.bat  run-agent.sh  setup-agent.bat  setup-agent.sh
src/app/: globals.css
src/app/(workspace)/: layout.tsx  page.tsx
src/app/(workspace)/approvals/: page.tsx
src/app/(workspace)/desk/: page.tsx
src/app/api/copilotkit/: route.ts
src/app/docs/: layout.tsx  page.tsx
src/lib/: loadMarkdown.ts
temp/: init.txt
tests/: conftest.py
tests/agent/: test_after_callback.py  test_analytics.py  test_control_plane_agent.py  test_coordinator.py  test_guardrails.py  test_outbox_record.py  test_settings.py
tests/guardrails/: test_evidence.py  test_quiet_hours.py  test_scopes.py  test_trust.py
tests/services/: test_catalog_sync.py  test_guardrail_state.py  test_supabase_outbox.py
tests/worker/: test_outbox_worker.py
worker/: outbox.py
